[package]
name = "runmasterd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
winapi = { version = "0.3.9", features = ["impl-default", "debug", "std", "winsvc",
    "handleapi", "minwindef", "securitybaseapi", "winbase", "winnt", "processthreadsapi",
    "processenv", "shellapi", "errhandlingapi", "windef", "libloaderapi", "winuser",
    "knownfolders", "shlobj", "shobjidl_core", "objidl", "propkey", "coml2api", "oaidl", "combaseapi",
"wtypesbase", "propidl"] }
log = "0.4.21"
tokio = { version = "1.36.0", features = ["rt", "macros", "rt-multi-thread"] }
dirs = "5.0.1"
chrono = "0.4.35"
anyhow = { version = "1.0.81", features = ["backtrace", "default"] }
execute = "0.2.13"
windows-service = "0.6.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
num-traits = { version = "0.2", features = ["default"] }
num-derive = { version = "0.4", features = [] }
process_path = "0.1.4"
#nwg = {version = "^1.0.12", package = "native-windows-gui", features = ["no-styling"]}
nwg = {version = "^1.0.12", package = "native-windows-gui", features = ["default", "high-dpi"]}

[build-dependencies]
embed-manifest = "1.3.1"